<resources>
    <!-- String for the login activity -->
    <string name="app_name">TeleConsultMobile</string>
    <string name="login_username_disp">Utilisateur :</string>
    <string name="login_password_disp">Mot de passe :</string>
    <string name="login_btn">Connexion</string>
    <string name="config_btn">Configurations</string>
    <!-- String of DashBoard activity -->
    <string name="welcome_msg">Bonjour docteur aaaa</string>
    <string name="dossier_status">Pas de nouveaux dossiers</string>
    <string name="addr_msg">8 rue bidon TOULOUSE</string>
    <string name="spe_msg">Generaliste</string>
    <!-- String for list of folders -->
    <string name="patient_name">Micheal</string>
    <string name="patient_sexe">sexe : M</string>
    <string name="patient_age">35 ans</string>
    <string name="patient_pato">Examen : ...</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_consult">Consult</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string-array name="pref_string_algo">
        <item>Algo_type_1</item>
        <item>Algo_type_2</item>
        <item>Algo_type_3</item>
    </string-array>
    <string-array name="pref_string_algo_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>
