<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/patient_name"
            android:textSize="20dp"
            android:textColor="#000"
            android:id="@+id/patient_nameID"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="10dp"
            android:text="@string/patient_sexe"
            android:textSize="20dp"
            android:textColor="#000"
            android:id="@+id/patient_sexeID"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/patient_age"
            android:textSize="20dp"
            android:textColor="#000"
            android:id="@+id/patient_ageID"
            />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/patient_pato"
        android:textSize="20dp"
        android:textColor="#000"
        android:id="@+id/patient_patoID"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:text="Status dossier :"
        android:textSize="20dp"
        android:textColor="#000"
        android:id="@+id/patient_statusID"
        />

    </LinearLayout>

</LinearLayout>
