<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="75dp"
                android:text="@string/welcome_msg"
                android:textSize="20dp"
                android:textColor="#000"
                android:id="@+id/welcomeLabelID"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/addr_msg"
                android:textSize="15dp"
                android:textColor="#000"
                android:id="@+id/addrID"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/spePhotoID"
                    android:src="@drawable/speico"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/spe_msg"
                    android:textSize="15dp"
                    android:textColor="#000"
                    android:id="@+id/specialiteID"
                    />

            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="25dp"
            android:id="@+id/photoID"
            android:src="@drawable/mendoc"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="20dp"
        android:text="@string/dossier_status"
        android:textSize="15dp"
        android:textColor="#000"
        android:id="@+id/folderStatusID"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/folderListID">
    </ListView>

</LinearLayout>
